# redup.python.servicekit

./: .buildinfo  LICENSE  README.md  config.html  example_client.html  example_server.html  genindex.html  grpc.html  health.html  index.html  logging.html  metrics.html  monitoring.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  redup_servicekit.config.html  redup_servicekit.grpc.client.html  redup_servicekit.grpc.decorators.html  redup_servicekit.grpc.html  redup_servicekit.health.html  redup_servicekit.html  redup_servicekit.logging.html  redup_servicekit.metrics.html  redup_servicekit.monitoring.html  requirements.txt  search.html  searchindex.js
.doctrees/: config.doctree  environment.pickle  example_client.doctree  example_server.doctree  grpc.doctree  health.doctree  index.doctree  logging.doctree  metrics.doctree  monitoring.doctree  readme.doctree  redup_servicekit.config.doctree  redup_servicekit.doctree  redup_servicekit.grpc.client.doctree  redup_servicekit.grpc.decorators.doctree  redup_servicekit.grpc.doctree  redup_servicekit.health.doctree  redup_servicekit.logging.doctree  redup_servicekit.metrics.doctree  redup_servicekit.monitoring.doctree
.github/workflows/: python-docs.yml  python-publish.yml  python-test.yml
_modules/: index.html
_modules/redup_servicekit/: config.html  logging.html  monitoring.html
_modules/redup_servicekit/grpc/: client.html  decorators.html
_sources/: config.rst.txt  example_server.rst.txt  grpc.rst.txt  health.rst.txt  index.rst.txt  logging.rst.txt  redup_servicekit.config.rst.txt  redup_servicekit.grpc.client.rst.txt  redup_servicekit.grpc.decorators.rst.txt  redup_servicekit.grpc.rst.txt  redup_servicekit.health.rst.txt  redup_servicekit.logging.rst.txt  redup_servicekit.metrics.rst.txt  redup_servicekit.monitoring.rst.txt  redup_servicekit.rst.txt
_static/: documentation_options.js
docs/source/: conf.py  config.rst  example_client.rst  index.rst  metrics.rst  monitoring.rst  redup_servicekit.rst
redup_servicekit/: __init__.py  config.py  health.py  logging.py  metrics.py  monitoring.py
redup_servicekit/grpc/: __init__.py  client.py  decorators.py  server.py
src/: pyproject.toml  requirements.txt
src/redup_servicekit/: __init__.py  health.py  metrics.py  monitoring.py
src/redup_servicekit/grpc/: __init__.py
tests/: simple.py  test_grpc_client.py  test_grpc_decorators.py  test_grpc_server.py  test_health.py  test_monitor_server.py  test_monitoring_ema.py
