[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redup-servicekit"
description = "Toolkit for Python microservices: YAML configuration, JSON logging, Prometheus metrics and gRPC utilities"
authors = [{name = "REDUP"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["servicekit", "python", "grpc", "prometheus"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"

dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/redup-ai/redup.python.servicekit/blob/master/README.md"
Repository = "https://github.com/redup-ai/redup.python.servicekit"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
dependencies = {file = ["requirements.txt"]}
